kubernetes/apps/kube-system/cilium/app/httproute.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-dashboard
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: cilium.png
    gethomepage.dev/name: Hubble
    gethomepage.dev/group: Observability
spec:
  hostnames: ["hubble.noirprime.com"]
  parentRefs:
    - name: internal
      namespace: networking-system
      sectionName: https
  rules:
    - backendRefs:
        - name: hubble-ui
          namespace: kube-system
          port: 80
